# project11_simulation

./: CMakeLists.txt  package.xml
config/: bob_operator.yaml  bob_platform.yaml  sim_operator.yaml
config/repos/: project11_simulation.repos
launch/: sim_boston.launch  sim_drix.launch  sim_dual.launch  sim_from_dock_no_currents.launch  sim_honolulu.launch  sim_local.launch  sim_operator.launch  sim_robot.launch  sim_test.launch
scripts/: start_sim_robot_different_roscore.sh  start_tmux_operator.sh
